--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/outfit": "^5.0.8",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@vercel/speed-insights": "^1.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
