--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/lab": "^5.0.0-alpha.165",
     "@vercel/speed-insights": "^1.0.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
